--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,10 @@ main {
       .center(column-reverse, flex-start, center, nowrap);
     }
 
+    @media @mobile {
+      margin-top: 30px;
+    }
+
     .cta {
       margin-top: 90px;
       max-width: 50%;
