--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @content-link: @moderate-cyan;
 @footer-bg: @very-dark-blue;
 @footer-link-hover: @desaturated-blue;
+@submit-button: @light-blue;
 
 //===================== Colors
 // Primary
@@ -21,5 +22,4 @@
 
 //===================== Other Variables
 @tablet: ~"(max-width: 800px)";
-@mobile: ~"(max-width: 375px)";
-@submit-button: @light-blue;
+@mobile: ~"(max-width: 600px)";
